# MUGI-for-PC

./: .~lock.mugi_sdl2_progress.docx#  CMakeLists.txt  PATCH_GUIDE.c  PATCH_GUIDE.md  README.md  extract_font_spec.py  mugi_config.ini  mugi_sdl2_progress.docx
include/: all_stage_data.h  audio_print_hal.h  hal.h  input_hal.h  msxgl.h  msxgl_types.h  mugi_title_logo.h
src/: main.c
src/game/: actpazle.c  actpazle_password.c  actpazle_ranking.c  actpazle_setting.c  actpazle_title.c
src/game/元ソース/: actpazle.c  actpazle_title.c
src/hal/: audio_sdl2.c  input_sdl2.c  print_sdl2.c  vdp_sdl2.c
